Fix background clipping

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,7 +28,7 @@ div {
     }
 }
 
-/* TODO: Fix clipping */
+/* Parent of background needs to have position: relative */
 .background {
     overflow: hidden;
     height: 100%;
@@ -43,4 +43,8 @@ div {
     align-items: center;
 
     z-index: -1; /* Make background behind everything */
+}
+
+.full-papge {
+    position: relative;
 }
